minor tag tweaks

--- a/templates/post.mustache.html
+++ b/templates/post.mustache.html
@@ -99,7 +99,7 @@
                     <form role="search" method="get" action="https://blog.za3k.com/" class="wp-block-search__no-button wp-block-search"><label class="wp-block-search__label screen-reader-text" for="wp-block-search__input-2">Search</label><div class="wp-block-search__inside-wrapper "><input class="wp-block-search__input" id="wp-block-search__input-2" placeholder="Search" value="" type="search" name="s" required=""></div></form>
                 </li>
                 <li id="block-14" class="widget-container widget_block widget_tag_cloud">
-                    {{& tag_cloud }}
+                    {{& tagcloud }}
                 </li>
             </ul>
             <ul class="xoxo"></ul>
