--- a/templates/tag.mustache.html
+++ b/templates/tag.mustache.html
@@ -6,18 +6,10 @@
 <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, minimum-scale=1.0, maximum-scale=3.0">
 <link rel="profile" href="http://gmpg.org/xfn/11" />
 <link rel="pingback" href="https://blog.za3k.com/xmlrpc.php" />
-<title>games</title>
+<title>{{ tag }}</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel="alternate" type="application/rss+xml" title=" &raquo; Feed" href="https://blog.za3k.com/feed/" />
-<link rel="alternate" type="application/rss+xml" title=" &raquo; Comments Feed" href="https://blog.za3k.com/comments/feed/" />
-<link rel="alternate" type="application/rss+xml" title=" &raquo; games Tag Feed" href="https://blog.za3k.com/tag/games/feed/" />
-<script type="text/javascript">
-/* <![CDATA[ */
-window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/blog.za3k.com\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.5.5"}};
-/*! This file is auto-generated */
-!function(i,n){var o,s,e;function c(e){try{var t={supportTests:e,timestamp:(new Date).valueOf()};sessionStorage.setItem(o,JSON.stringify(t))}catch(e){}}function p(e,t,n){e.clearRect(0,0,e.canvas.width,e.canvas.height),e.fillText(t,0,0);var t=new Uint32Array(e.getImageData(0,0,e.canvas.width,e.canvas.height).data),r=(e.clearRect(0,0,e.canvas.width,e.canvas.height),e.fillText(n,0,0),new Uint32Array(e.getImageData(0,0,e.canvas.width,e.canvas.height).data));return t.every(function(e,t){return e===r[t]})}function u(e,t,n){switch(t){case"flag":return n(e,"\ud83c\udff3\ufe0f\u200d\u26a7\ufe0f","\ud83c\udff3\ufe0f\u200b\u26a7\ufe0f")?!1:!n(e,"\ud83c\uddfa\ud83c\uddf3","\ud83c\uddfa\u200b\ud83c\uddf3")&&!n(e,"\ud83c\udff4\udb40\udc67\udb40\udc62\udb40\udc65\udb40\udc6e\udb40\udc67\udb40\udc7f","\ud83c\udff4\u200b\udb40\udc67\u200b\udb40\udc62\u200b\udb40\udc65\u200b\udb40\udc6e\u200b\udb40\udc67\u200b\udb40\udc7f");case"emoji":return!n(e,"\ud83d\udc26\u200d\u2b1b","\ud83d\udc26\u200b\u2b1b")}return!1}function f(e,t,n){var r="undefined"!=typeof WorkerGlobalScope&&self instanceof WorkerGlobalScope?new OffscreenCanvas(300,150):i.createElement("canvas"),a=r.getContext("2d",{willReadFrequently:!0}),o=(a.textBaseline="top",a.font="600 32px Arial",{});return e.forEach(function(e){o[e]=t(a,e,n)}),o}function t(e){var t=i.createElement("script");t.src=e,t.defer=!0,i.head.appendChild(t)}"undefined"!=typeof Promise&&(o="wpEmojiSettingsSupports",s=["flag","emoji"],n.supports={everything:!0,everythingExceptFlag:!0},e=new Promise(function(e){i.addEventListener("DOMContentLoaded",e,{once:!0})}),new Promise(function(t){var n=function(){try{var e=JSON.parse(sessionStorage.getItem(o));if("object"==typeof e&&"number"==typeof e.timestamp&&(new Date).valueOf()<e.timestamp+604800&&"object"==typeof e.supportTests)return e.supportTests}catch(e){}return null}();if(!n){if("undefined"!=typeof Worker&&"undefined"!=typeof OffscreenCanvas&&"undefined"!=typeof URL&&URL.createObjectURL&&"undefined"!=typeof Blob)try{var e="postMessage("+f.toString()+"("+[JSON.stringify(s),u.toString(),p.toString()].join(",")+"));",r=new Blob([e],{type:"text/javascript"}),a=new Worker(URL.createObjectURL(r),{name:"wpTestEmojiSupports"});return void(a.onmessage=function(e){c(n=e.data),a.terminate(),t(n)})}catch(e){}c(n=f(s,u,p))}t(n)}).then(function(e){for(var t in e)n.supports[t]=e[t],n.supports.everything=n.supports.everything&&n.supports[t],"flag"!==t&&(n.supports.everythingExceptFlag=n.supports.everythingExceptFlag&&n.supports[t]);n.supports.everythingExceptFlag=n.supports.everythingExceptFlag&&!n.supports.flag,n.DOMReady=!1,n.readyCallback=function(){n.DOMReady=!0}}).then(function(){return e}).then(function(){var e;n.supports.everything||(n.readyCallback(),(e=n.source||{}).concatemoji?t(e.concatemoji):e.wpemoji&&e.twemoji&&(t(e.twemoji),t(e.wpemoji)))}))}((window,document),window._wpemojiSettings);
-/* ]]> */
-</script>
+<link rel="alternate" type="application/rss+xml" title=" &raquo; {{ tag }} Tag Feed" href="https://blog.za3k.com/tag/{{ slug }}/feed/" />
 <link rel='stylesheet' id='dashicons-css' href='https://blog.za3k.com/wp-includes/css/dashicons.min.css?ver=6.5.5' type='text/css' media='all' />
 <link rel='stylesheet' id='admin-bar-css' href='https://blog.za3k.com/wp-includes/css/admin-bar.min.css?ver=6.5.5' type='text/css' media='all' />
 <style id='admin-bar-inline-css' type='text/css'>
@@ -59,48 +51,10 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 /* Mantra Custom CSS */
 </style>
 <link rel='stylesheet' id='mantra-mobile-css' href='https://blog.za3k.com/wp-content/themes/mantra/resources/css/style-mobile.css?ver=3.3.2' type='text/css' media='all' />
-<script type="text/javascript" src="https://blog.za3k.com/wp-includes/js/jquery/jquery.min.js?ver=3.7.1" id="jquery-core-js"></script>
-<script type="text/javascript" src="https://blog.za3k.com/wp-includes/js/jquery/jquery-migrate.min.js?ver=3.4.1" id="jquery-migrate-js"></script>
-<script type="text/javascript" id="mantra-frontend-js-extra">
-/* <![CDATA[ */
-var mantra_options = {"responsive":"1","image_class":"imageSeven","equalize_sidebars":"0"};
-/* ]]> */
-</script>
-<script type="text/javascript" src="https://blog.za3k.com/wp-content/themes/mantra/resources/js/frontend.js?ver=3.3.2" id="mantra-frontend-js"></script>
 <link rel="https://api.w.org/" href="https://blog.za3k.com/wp-json/" /><link rel="alternate" type="application/json" href="https://blog.za3k.com/wp-json/wp/v2/tags/60" /><link rel="EditURI" type="application/rsd+xml" title="RSD" href="https://blog.za3k.com/xmlrpc.php?rsd" />
 <meta name="generator" content="WordPress 6.5.5" />
-<link rel="stylesheet" type="text/css" href="https://blog.za3k.com/wp-content/plugins/wp-recaptcha/recaptcha.css" /><!--[if lte IE 8]> <style type="text/css" media="screen"> #access ul li, .edit-link a , #footer-widget-area .widget-title, .entry-meta,.entry-meta .comments-link, .short-button-light, .short-button-dark ,.short-button-color ,blockquote { position:relative; behavior: url(https://blog.za3k.com/wp-content/themes/mantra/resources/js/PIE/PIE.php); } #access ul ul { -pie-box-shadow:0px 5px 5px #999; } #access ul li.current_page_item, #access ul li.current-menu-item , #access ul li ,#access ul ul ,#access ul ul li, .commentlist li.comment ,.commentlist .avatar, .nivo-caption, .theme-default .nivoSlider { behavior: url(https://blog.za3k.com/wp-content/themes/mantra/resources/js/PIE/PIE.php); } </style> <![endif]--><!--[if lt IE 9]>
-	<script>
-	document.createElement('header');
-	document.createElement('nav');
-	document.createElement('section');
-	document.createElement('article');
-	document.createElement('aside');
-	document.createElement('footer');
-	document.createElement('hgroup');
-	</script>
-	<![endif]--> </head>
-<body class="archive tag tag-games tag-60 logged-in admin-bar no-customize-support mantra-image-seven mantra-caption-light mantra-hratio-0 mantra-sidebar-right mantra-menu-left">
-	<script type="text/javascript">
-/* <![CDATA[ */
-
-		(function() {
-			var request, b = document.body, c = 'className', cs = 'customize-support', rcs = new RegExp('(^|\\s+)(no-)?'+cs+'(\\s+|$)');
-
-				request = true;
-	
-			b[c] = b[c].replace( rcs, ' ' );
-			// The customizer requires postMessage and CORS (if the site is cross domain).
-			b[c] += ( window.postMessage && request ? ' ' : ' no-' ) + cs;
-		}());
-	
-/* ]]> */
-</script>
-		<div id="wpadminbar" class="nojq nojs">
-						<div class="quicklinks" id="wp-toolbar" role="navigation" aria-label="Toolbar">
-				<ul role='menu' id='wp-admin-bar-root-default' class="ab-top-menu"><li id='wp-admin-bar-wp-logo' class="menupop"><a class='ab-item' role="menuitem" aria-expanded="false" href='https://blog.za3k.com/wp-admin/about.php'><span class="ab-icon" aria-hidden="true"></span><span class="screen-reader-text">About WordPress</span></a><div class="ab-sub-wrapper"><ul role='menu' aria-label='About WordPress' id='wp-admin-bar-wp-logo-default' class="ab-submenu"><li id='wp-admin-bar-about'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/about.php'>About WordPress</a></li><li id='wp-admin-bar-contribute'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/contribute.php'>Get Involved</a></li></ul><ul role='menu' aria-label='About WordPress' id='wp-admin-bar-wp-logo-external' class="ab-sub-secondary ab-submenu"><li id='wp-admin-bar-wporg'><a class='ab-item' role="menuitem" href='https://wordpress.org/'>WordPress.org</a></li><li id='wp-admin-bar-documentation'><a class='ab-item' role="menuitem" href='https://wordpress.org/documentation/'>Documentation</a></li><li id='wp-admin-bar-learn'><a class='ab-item' role="menuitem" href='https://learn.wordpress.org/'>Learn WordPress</a></li><li id='wp-admin-bar-support-forums'><a class='ab-item' role="menuitem" href='https://wordpress.org/support/forums/'>Support</a></li><li id='wp-admin-bar-feedback'><a class='ab-item' role="menuitem" href='https://wordpress.org/support/forum/requests-and-feedback'>Feedback</a></li></ul></div></li><li id='wp-admin-bar-site-name' class="menupop"><a class='ab-item' role="menuitem" aria-expanded="false" href='https://blog.za3k.com/wp-admin/'>blog.za3k.com</a><div class="ab-sub-wrapper"><ul role='menu' aria-label='blog.za3k.com' id='wp-admin-bar-site-name-default' class="ab-submenu"><li id='wp-admin-bar-dashboard'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/'>Dashboard</a></li><li id='wp-admin-bar-plugins'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/plugins.php'>Plugins</a></li></ul><ul role='menu' aria-label='blog.za3k.com' id='wp-admin-bar-appearance' class="ab-submenu"><li id='wp-admin-bar-themes'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/themes.php'>Themes</a></li><li id='wp-admin-bar-widgets'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/widgets.php'>Widgets</a></li><li id='wp-admin-bar-menus'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/nav-menus.php'>Menus</a></li><li id='wp-admin-bar-background' class="hide-if-customize"><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/themes.php?page=custom-background'>Background</a></li><li id='wp-admin-bar-header' class="hide-if-customize"><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/themes.php?page=custom-header'>Header</a></li></ul></div></li><li id='wp-admin-bar-customize' class="hide-if-no-customize"><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/customize.php?url=https%3A%2F%2Fblog.za3k.com%2Ftag%2Fgames%2F'>Customize</a></li><li id='wp-admin-bar-comments'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/edit-comments.php'><span class="ab-icon" aria-hidden="true"></span><span class="ab-label awaiting-mod pending-count count-0" aria-hidden="true">0</span><span class="screen-reader-text comments-in-moderation-text">0 Comments in moderation</span></a></li><li id='wp-admin-bar-new-content' class="menupop"><a class='ab-item' role="menuitem" aria-expanded="false" href='https://blog.za3k.com/wp-admin/post-new.php'><span class="ab-icon" aria-hidden="true"></span><span class="ab-label">New</span></a><div class="ab-sub-wrapper"><ul role='menu' aria-label='New' id='wp-admin-bar-new-content-default' class="ab-submenu"><li id='wp-admin-bar-new-post'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/post-new.php'>Post</a></li><li id='wp-admin-bar-new-media'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/media-new.php'>Media</a></li><li id='wp-admin-bar-new-page'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/post-new.php?post_type=page'>Page</a></li><li id='wp-admin-bar-new-user'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/user-new.php'>User</a></li></ul></div></li><li id='wp-admin-bar-edit'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/term.php?taxonomy=post_tag&#038;tag_ID=60&#038;post_type=post'>Edit Tag</a></li></ul><ul role='menu' id='wp-admin-bar-top-secondary' class="ab-top-secondary ab-top-menu"><li id='wp-admin-bar-search' class="admin-bar-search"><div class="ab-item ab-empty-item" tabindex="-1" role="menuitem"><form action="https://blog.za3k.com/" method="get" id="adminbarsearch"><input class="adminbar-input" name="s" id="adminbar-search" type="text" value="" maxlength="150" /><label for="adminbar-search" class="screen-reader-text">Search</label><input type="submit" class="adminbar-button" value="Search" /></form></div></li><li id='wp-admin-bar-my-account' class="menupop with-avatar"><a class='ab-item' role="menuitem" aria-expanded="false" href='https://blog.za3k.com/wp-admin/profile.php'>Howdy, <span class="display-name">admin</span><img alt='' src='https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=26&#038;d=mm&#038;r=g' srcset='https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=52&#038;d=mm&#038;r=g 2x' class='avatar avatar-26 photo' height='26' width='26' decoding='async'/></a><div class="ab-sub-wrapper"><ul role='menu' aria-label='Howdy, admin' id='wp-admin-bar-user-actions' class="ab-submenu"><li id='wp-admin-bar-user-info'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-admin/profile.php'><img alt='' src='https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=64&#038;d=mm&#038;r=g' srcset='https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=128&#038;d=mm&#038;r=g 2x' class='avatar avatar-64 photo' height='64' width='64' decoding='async'/><span class='display-name'>admin</span><span class='display-name edit-profile'>Edit Profile</span></a></li><li id='wp-admin-bar-logout'><a class='ab-item' role="menuitem" href='https://blog.za3k.com/wp-login.php?action=logout&#038;_wpnonce=47237d8193'>Log Out</a></li></ul></div></li></ul>			</div>
-		</div>
-
+</head>
+<body class="archive tag no-customize-support mantra-image-seven mantra-caption-light mantra-hratio-0 mantra-sidebar-right mantra-menu-left">
 		    <div id="toTop"><i class="crycon-back2top"></i> </div>
 		
 <div id="wrapper" class="hfeed">
@@ -165,29 +119,19 @@ var mantra_options = {"responsive":"1","image_class":"imageSeven","equalize_side
 
 									</header>
 
-						<nav id="nav-above" class="navigation">
-			<div class="nav-previous"><a href="https://blog.za3k.com/tag/games/page/2/" ><span class="meta-nav">&laquo;</span> Older posts</a></div>
-			<div class="nav-next"></div>
-		</nav><!-- #nav-above -->
-	
-
             {{# posts }}
                 {{& post }}
             {{/ posts }}
 				
-				<div class='pagination_container'><nav class='pagination'><span class='current'>1</span><a href='https://blog.za3k.com/tag/games/page/2/' class='inactive' >2</a></nav></div>
-
 			
 						</div><!-- #content -->
 			<div id="primary" class="widget-area" role="complementary">
 
-		
-		
 			<ul class="xoxo">
 				<li id="block-15" class="widget-container widget_block widget_text">
 <p><a href="https://za3k.com/blog">archive</a><br><a href="https://za3k.com">za3k.com</a></p>
 </li><li id="block-2" class="widget-container widget_block widget_search"><form role="search" method="get" action="https://blog.za3k.com/" class="wp-block-search__no-button wp-block-search"    ><label class="wp-block-search__label screen-reader-text" for="wp-block-search__input-1" >Search</label><div class="wp-block-search__inside-wrapper " ><input class="wp-block-search__input" id="wp-block-search__input-1" placeholder="Search" value="" type="search" name="s" required /></div></form></li><li id="block-14" class="widget-container widget_block widget_tag_cloud">
-                    {{& tag_cloud }}</li></ul>
+                    {{& tagcloud }}</li></ul>
 
 			<ul class="xoxo">
 							</ul>
@@ -201,30 +145,6 @@ var mantra_options = {"responsive":"1","image_class":"imageSeven","equalize_side
 
 	</div> <!-- #forbottom -->
 	</div><!-- #main -->
-
-
-	<footer id="footer" role="contentinfo">
-		<div id="colophon">
-		
-			
-			
-		</div><!-- #colophon -->
-
-		<div id="footer2">
-		
-			<div style="text-align:center;clear:both;padding-top:4px;" >
-	<a href="https://blog.za3k.com/" title="" rel="home">
-		</a> | Powered by <a target="_blank" href="http://www.cryoutcreations.eu/mantra" title="Mantra Theme by Cryout Creations">Mantra</a> &amp; <a target="_blank" href="http://wordpress.org/"
-		title="Semantic Personal Publishing Platform">  WordPress.	</a>
-</div><!-- #site-info --> 			
-		</div><!-- #footer2 -->
-
-	</footer><!-- #footer -->
-
 </div><!-- #wrapper -->
-
-<script type="text/javascript" src="https://blog.za3k.com/wp-includes/js/hoverintent-js.min.js?ver=2.2.1" id="hoverintent-js-js"></script>
-<script type="text/javascript" src="https://blog.za3k.com/wp-includes/js/admin-bar.min.js?ver=6.5.5" id="admin-bar-js"></script>
-
 </body>
 </html>
