--- a/templates/category.mustache.html
+++ b/templates/category.mustache.html
@@ -1,5 +1,5 @@
 <header class="page-header">
-    <h1 class="page-title">Tag Archives: <span>{{ tag }}</span></h1>
+    <h1 class="page-title">Category Archives: <span>{{ tag }}</span></h1>
 </header>
 
 {{# posts }}
