--- a/templates/layout.mustache.html
+++ b/templates/layout.mustache.html
@@ -4,9 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, minimum-scale=1.0, maximum-scale=3.0">
     <link rel="profile" href="http://gmpg.org/xfn/11">
-    <link rel="pingback" href="https://blog.za3k.com/xmlrpc.php">
     <meta name="robots" content="max-image-preview:large">
-    <link rel="alternate" type="application/rss+xml" title=" » Feed" href="https://blog.za3k.com/feed/">
+    <link rel="alternate" type="application/rss+xml" title=" » Feed" href="https://blog.za3k.com/pages/feed.xml">
     <style id="wp-emoji-styles-inline-css" type="text/css">
         img.wp-smiley, img.emoji {
             display: inline !important;
@@ -57,7 +56,7 @@
                     <div id="site-description">blog of zachary "za3k" vance</div>
                 </div>
                 <div class="socials" id="sheader">
-                    <a target="_blank" rel="nofollow" href="https://blog.za3k.com/feed/" class="socialicons social-RSS" title="RSS">
+                    <a target="_blank" rel="nofollow" href="https://blog.za3k.com/pages/feed.xml" class="socialicons social-RSS" title="RSS">
                         <img alt="RSS" src="../wp-content/themes/mantra/resources/images/socials/RSS.png">
                     </a>
                     <a target="_blank" rel="nofollow" href="https://twitter.com/unchoke" class="socialicons social-Twitter" title="Twitter">
