--- a/templates/tag.mustache.html
+++ b/templates/tag.mustache.html
@@ -2,6 +2,6 @@
     <h1 class="page-title">Tag Archives: <span>{{ tag }}</span></h1>
 </header>
 
-{{# posts }}
+{{# posts.first10 }}
     {{& post }}
-{{/ posts }}
+{{/ posts.first10 }}
