Fix duckduckgo search

--- a/templates/layout.mustache.html
+++ b/templates/layout.mustache.html
@@ -92,7 +92,7 @@
                     <p><a href="https://za3k.com/blog">archive</a><br><a href="https://za3k.com">za3k.com</a></p>
                 </li>
                 <li id="block-2" class="widget-container widget_block widget_search">
-                    <iframe src="https://duckduckgo.com/search.html?width=250&site=blog.za3k.com&prefill=Search%20blog&focus=yes" style="overflow:hidden,margin:0;padding:0;width:308px;height:40xpx;" frameborder="0"></iframe>
+                    <iframe src="https://duckduckgo.com/search.html?width=142&site={{domain}}&prefill=Search%20blog" style="overflow:hidden;margin:0;padding:0;width:200px;height:40px;" frameborder="0"></iframe>
                 </li>
                 <li id="block-14" class="widget-container widget_block widget_tag_cloud">
                     {{& tagcloud }}
