Hide comments section if there are none

--- a/templates/post.mustache.html
+++ b/templates/post.mustache.html
@@ -1,6 +1,10 @@
 <article class="post type-post status-publish format-standard hentry">
 
-<h1 class="entry-title">{{title}}</h1>
+<h1 class="entry-title">
+{{^main_display}}<a href="{{url}}" title="Permalink to {{title}}" rel="bookmark">{{/main_display}}
+{{title}}
+{{^main_display}}</a>{{/main_display}}
+</h1>
 
 <div class="entry-meta">
 <span class="author vcard"> By  <a class="url fn n" href="{{web_root}}/author/{{author.slug}}.html" rel="author" title="View all posts by {{author.tag}}">{{author.tag}}</a> <span class="bl_sep">|</span></span> <time class="onDate date published" datetime="{{date}}"> <a href="{{url}}" rel="bookmark" title="{{time}}"><span class="entry-date">{{day}}</span> <span class="entry-time"> - {{time}}</span></a> </time><span class="bl_sep">|</span><time class="updated" datetime="{{date}}">{{day}}</time> 
@@ -29,10 +33,12 @@
 </div>
 
 {{#main_display}}
+{{#comments}}
 <div id="comments">
     <h3 id="comments-title">Responses to <em>{{title}}</em></h3>
     {{& comments }}
 </div>
+{{/comments}}
 {{/main_display}}
 
 </article>
