--- a/templates/post.mustache.html
+++ b/templates/post.mustache.html
@@ -35,7 +35,7 @@
 {{#main_display}}
 {{#comments}}
 <div id="comments">
-    <h3 id="comments-title">Responses to <em>{{title}}</em></h3>
+    <h3 id="comments-title">Responses to <em>{{post_title}}</em></h3>
     {{& comments }}
 </div>
 {{/comments}}
