--- a/static/style-wordpress.css
+++ b/static/style-wordpress.css
@@ -7831,3 +7831,10 @@ body .wp-caption {
 	}
 
 }
+
+/* Inline CSS */
+.wp-block-gallery.wp-block-gallery-1 {
+    --wp--style--unstable-gallery-gap: var(--wp--style--gallery-gap-default, var(--gallery-block--gutter-size, var(--wp--style--block-gap, 0.5em)));
+    gap: var(--wp--style--gallery-gap-default, var(--gallery-block--gutter-size, var(--wp--style--block-gap, 0.5em)));
+}
+
