Switch to final absolute URLs

--- a/templates/feed.mustache.html
+++ b/templates/feed.mustache.html
@@ -19,7 +19,7 @@
     {{# posts.first10 }}
 	<item>
 		<title>{{title}}</title>
-		<link>{{web_root}}/post/{{id}}.html</link>
+		<link>{{url}}</link>
 		<dc:creator><![CDATA[{{author.tag}}]]></dc:creator>
 		<pubDate>{{date_rfc822}}</pubDate>
         {{# categories }}
