--- a/templates/layout.mustache.html
+++ b/templates/layout.mustache.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="max-image-preview:large">
     <link rel="alternate" type="application/rss+xml" title=" » Feed" href="{{feed_url}}">
 
-    <link rel="stylesheet" href="{{web_root}}/style-wordpress.css" type="text/css" media="all">
+    <link rel="stylesheet" href="{{web_root}}/css/style-wordpress.css" type="text/css" media="all">
 </head>
 
 <body>
@@ -24,10 +24,7 @@
                 <div id="site-description">blog of zachary "za3k" vance</div>
                 <div class="socials" id="sheader">
                     <a target="_blank" rel="nofollow" href="{{feed_url}}" class="socialicons social-RSS" title="RSS">
-                        <img alt="RSS" src="{{web_root}}/resources/images/RSS.png">
-                    </a>
-                    <a target="_blank" rel="nofollow" href="https://twitter.com/unchoke" class="socialicons social-Twitter" title="Twitter">
-                        <img alt="Twitter" src="{{web_root}}/resources/images/Twitter.png">
+                        <img alt="RSS" src="{{web_root}}/images/RSS.png">
                     </a>
                 </div>
             </div>
@@ -37,8 +34,8 @@
         <nav id="access" class="" role="navigation">
             <div class="menu">
                 <ul id="prime_nav" class="menu">
-                    <li id="menu-item-255" class="menu-item menu-item-type-taxonomy menu-item-object-category current-post-ancestor current-menu-parent current-post-parent menu-item-255"><a href="{{web_root}}/category/non-technical.html">Non-Technical</a></li>
-                    <li id="menu-item-256" class="menu-item menu-item-type-taxonomy menu-item-object-category current-post-ancestor current-menu-parent current-post-parent menu-item-256"><a href="{{web_root}}/category/technical.html">Technical</a></li>
+                    <li id="menu-item-255" class="menu-item menu-item-type-taxonomy menu-item-object-category current-post-ancestor current-menu-parent current-post-parent menu-item-255"><a href="{{web_root}}/category/non-technical/">Non-Technical</a></li>
+                    <li id="menu-item-256" class="menu-item menu-item-type-taxonomy menu-item-object-category current-post-ancestor current-menu-parent current-post-parent menu-item-256"><a href="{{web_root}}/category/technical/">Technical</a></li>
                 </ul>
             </div>
         </nav>
