--- a/templates/tagcloud.mustache.html
+++ b/templates/tagcloud.mustache.html
@@ -1,6 +1,6 @@
 
 <p class="wp-block-tag-cloud">
     {{# top_tags }}
-        <a href="../tag/{{ slug }}.html" class="tag-cloud-link" style="font-size: {{ font_size }}pt;" aria-label="{{ tag }} ({{ num_posts }} items)">{{ tag }}</a>
+        <a href="{{ url }}" class="tag-cloud-link" style="font-size: {{ font_size }}pt;" aria-label="{{ tag }} ({{ num_posts }} items)">{{ tag }}</a>
     {{/ top_tags }}
 </p>
