--- a/templates/category.mustache.html
+++ b/templates/category.mustache.html
@@ -2,6 +2,6 @@
     <h1 class="page-title">Category Archives: <span>{{ tag }}</span></h1>
 </header>
 
-{{# posts.first10 }}
+{{# current_page.posts }}
     {{& html }}
-{{/ posts.first10 }}
+{{/ current_page.posts }}
