--- a/templates/layout.mustache.html
+++ b/templates/layout.mustache.html
@@ -3,10 +3,8 @@
     <title>{{ title }}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, minimum-scale=1.0, maximum-scale=3.0">
-    <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="robots" content="max-image-preview:large">
     <link rel="alternate" type="application/rss+xml" title=" » Feed" href="{{feed_url}}">
-
     <link rel="stylesheet" href="{{web_root}}/css/style-wordpress.css" type="text/css" media="all">
 </head>
 
@@ -49,6 +47,7 @@
 		<section id="container">
 			<div id="content" role="main">
                 {{& content }}
+                {{& pagination }}
             </div>
 			<div id="primary" class="widget-area" role="complementary">
                 <ul class="xoxo">
