multi-row pagination spacing

--- a/static/css/style-wordpress.css
+++ b/static/css/style-wordpress.css
@@ -6828,6 +6828,7 @@ article.sticky {
 	float: left;
 	width: auto;
 	margin-right: 10px;
+	margin-bottom: 10px;
 	height: 3em;
 	width: 3em;
 	line-height: 3;
