--- a/templates/layout.mustache.html
+++ b/templates/layout.mustache.html
@@ -19,7 +19,7 @@
     <div id="masthead">
         <div id="branding" role="banner">
             <div id="header-container">
-                <div id="site-description">blog of zachary "za3k" vance</div>
+                <div id="site-description"><a href="{{web_root}}">blog of zachary "za3k" vance</a></div>
                 <div class="socials" id="sheader">
                     <a target="_blank" rel="nofollow" href="{{feed_url}}" class="socialicons social-RSS" title="RSS">
                         <img alt="RSS" src="{{web_root}}/images/RSS.png">
