Show sitenav main link is a link

--- a/static/css/style-wordpress.css
+++ b/static/css/style-wordpress.css
@@ -4887,6 +4887,10 @@ a:hover {
 	color: #999;
 }
 
+#site-description a:hover {
+	text-decoration: underline;
+}
+
 #header-container {
 	position: absolute;
 	top: 0;
