--- a/templates/post.mustache.html
+++ b/templates/post.mustache.html
@@ -48,4 +48,7 @@
     <noscript>Javascript needs to be activated to view comments.</noscript>
 </section>
 {{/main_display}}
+{{^main_display}}
+{{^main_display}}<a href="{{url}}#isso-thread" class="leave-comment">leave comment</a>{{/main_display}}
+{{/main_display}}
 </article>
